--- a/map.css
+++ b/map.css
@@ -24,3 +24,11 @@ body {
   height: 100%;
   pointer-events: none;
 }
+
+#map svg circle {
+  fill: steelblue;
+  fill-opacity: 60%;
+  stroke: white;
+  pointer-events: auto;
+  cursor: pointer;
+}
