--- a/map.css
+++ b/map.css
@@ -26,7 +26,14 @@ body {
 }
 
 #map svg circle {
-  fill: steelblue;
+  --color-departures: steelblue;
+  --color-arrivals: darkorange;
+  --color: color-mix(
+    in oklch,
+    var(--color-departures) calc(100% * var(--departure-ratio)),
+    var(--color-arrivals)
+  );
+  fill: var(--color);
   fill-opacity: 60%;
   stroke: white;
   pointer-events: auto;
