--- a/global.css
+++ b/global.css
@@ -11,38 +11,88 @@ body {
 
 header {
   display: flex;
-  gap: 1em;
-  align-items: baseline;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2em;
+  padding: 1em 0;
 }
 
-header label {
-  margin-left: auto;
+.header-left {
   display: flex;
   align-items: center;
-  gap: 0.5em;
+  gap: 0.75em;
+}
+
+.logo {
+  width: 32px;
+  height: 32px;
+  display: block;
+}
+
+header h1 {
+  margin: 0;
+  font-size: 1.5em;
+  font-weight: bold;
+  color: #000;
+  white-space: nowrap;
+}
+
+.header-right {
+  display: flex;
+  align-items: center;
+  gap: 1em;
   flex-wrap: wrap;
 }
 
-header input[type="range"] {
-  flex: 1;
-  min-width: 200px;
-}
-
-header .time-display-container {
+header label {
   display: flex;
   align-items: center;
-  min-width: 100px;
-  flex-basis: 100%;
-  margin-top: 0.25em;
+  gap: 0.75em;
+  font-size: 0.95em;
+  color: #000;
+  white-space: nowrap;
 }
 
-header time,
-header em {
-  display: block;
-  line-height: 1.2;
+header input[type="range"] {
+  width: 200px;
+  height: 4px;
+  background: #e0e0e0;
+  border-radius: 2px;
+  outline: none;
+  -webkit-appearance: none;
+}
+
+header input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 16px;
+  height: 16px;
+  background: #4A90E2;
+  border-radius: 50%;
+  cursor: pointer;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+}
+
+header input[type="range"]::-moz-range-thumb {
+  width: 16px;
+  height: 16px;
+  background: #4A90E2;
+  border-radius: 50%;
+  cursor: pointer;
+  border: none;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+}
+
+header time {
+  color: #000;
+  font-size: 0.95em;
+  white-space: nowrap;
 }
 
 header em {
-  color: #666;
+  color: #000;
   font-style: italic;
+  font-size: 0.95em;
+  white-space: nowrap;
+  display: inline;
 }
